# shelter-project

./: Cargo.toml  config.json
entity/: Cargo.toml
entity/src/: user.rs
shelter_main/: Cargo.toml
shelter_main/src/: main.rs  settings.rs
shelter_main/src/api/: mod.rs  v1.rs
shelter_main/src/api/handlers/: dogs.rs  hello.rs  jwt.rs  login.rs
shelter_main/src/api/middleware/: json.rs
shelter_main/src/api/response/: dogs.rs  error.rs  login.rs
shelter_main/src/commands/: createadmin.rs  hello.rs  migrate.rs  mod.rs  serve.rs
shelter_main/src/state/: mod.rs
