[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.13"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
arc-swap = "1.7.1"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "../migration" }
entity = { path = "../entity" }
password-hash = "0.5"
argon2 = "0.5"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"

tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-opentelemetry = { version = "0.22" }
tower-http = { version = "0.4.3", features = ["trace"] }
opentelemetry = { version = "0.21.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "metrics", "logs"]  }
opentelemetry-semantic-conventions = { version = "0.13.0" }
opentelemetry-http = "0.10.0"